--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
-.container{
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+.container {
     width: 100%;
     max-width: 1400px !important;
     margin: 0 auto;
@@ -7,4 +7,7 @@
 }
 .dropdown-trigger {
     width: 100%;
-  }
+}
+/* html {
+    overflow-x: hidden;
+} */
